--- a/index.html
+++ b/index.html
@@ -15,20 +15,25 @@
         #header {
             display: flex;
             justify-content: flex-end;
-            padding: 20px;
+            padding: 10px;
             background: linear-gradient(135deg, #333333, #555555);
             color: white;
+        }
+        #header button {
+            font-size: 14px;
+            padding: 8px 20px;
+            margin: 5px;
         }
         #main {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 50px;
+            padding: 20px;
             overflow-y: auto;
             max-height: 90vh;
         }
         button {
-            padding: 10px 50px;
+            padding: 10px 20px;
             margin: 10px;
             font-size: 16px;
             cursor: pointer;
@@ -61,6 +66,26 @@
         .back-button {
             margin-top: 20px;
             background-color: #ccc;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid #ddd;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .delete-button {
+            background-color: #ff6b6b;
+            color: #fff;
+        }
+        .delete-button:hover {
+            background-color: #ff4d4d;
         }
     </style>
 </head>
@@ -129,7 +154,7 @@
             const main = document.getElementById('main');
             main.innerHTML = `
                 <h2>Bienvenido, ${userInfo.nombre}</h2>
-                <button onclick="manageRoutines()">Rutinas</button><br>
+                <button onclick="manageRoutines()">Administrar Rutinas</button><br>
                 <button onclick="registerExercise()">Registrar Ejercicio Realizado</button><br>
                 <button onclick="viewProgress()">Ver Progreso</button><br>
             `;
@@ -138,7 +163,7 @@
         function manageRoutines() {
             const main = document.getElementById('main');
             main.innerHTML = `
-                <h2>Rutinas</h2>
+                <h2>Administrar Rutinas</h2>
                 <button onclick="registerRoutines()">Registrar Rutinas</button><br>
                 <button onclick="viewRoutines()">Ver Rutinas</button><br>
                 <button onclick="deleteRoutines()">Eliminar Rutinas</button><br>
@@ -185,8 +210,8 @@
             main.innerHTML = `
                 <h2>Eliminar Rutinas</h2>
                 <ul>
-                    <li>Rutina 1 <button onclick="deleteRoutine('Rutina 1')">Eliminar</button></li>
-                    <li>Rutina 2 <button onclick="deleteRoutine('Rutina 2')">Eliminar</button></li>
+                    <li>Rutina 1 <button class="delete-button" onclick="deleteRoutine('Rutina 1')">Eliminar</button></li>
+                    <li>Rutina 2 <button class="delete-button" onclick="deleteRoutine('Rutina 2')">Eliminar</button></li>
                 </ul>
                 <button class="back-button" onclick="manageRoutines()">Volver</button>
             `;
@@ -198,7 +223,25 @@
         }
 
         function registerExercise() {
-            alert('Funcionalidad no implementada en la versión web.');
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Registrar Ejercicio Realizado</h2>
+                <label>Selecciona la Rutina:</label>
+                <select id="routine">
+                    <option value="Rutina 1">Rutina 1</option>
+                    <option value="Rutina 2">Rutina 2</option>
+                </select><br><br>
+                <label>Fecha y Hora:</label>
+                <input type="datetime-local" id="datetime"><br><br>
+                <button class="save-button" onclick="saveExercise()">Guardar Registro</button><br>
+                <button class="back-button" onclick="showMainScreen()">Volver</button>
+            `;
+        }
+
+        function saveExercise() {
+            const routine = document.getElementById('routine').value;
+            const datetime = document.getElementById('datetime').value;
+            alert(`Registro guardado para ${routine} en ${datetime}`);
             showMainScreen();
         }
 
@@ -206,97 +249,47 @@
             const main = document.getElementById('main');
             main.innerHTML = `
                 <h2>Ver Progreso</h2>
-                <canvas id="weightChart"></canvas><br>
-                <canvas id="heightChart"></canvas><br>
+                <div>
+                    <canvas id="progressChart" width="400" height="200"></canvas>
+                </div>
                 <button class="back-button" onclick="showMainScreen()">Volver</button>
             `;
+            createProgressChart();
+        }
 
-            const weightCtx = document.getElementById('weightChart').getContext('2d');
-            new Chart(weightCtx, {
+        function createProgressChart() {
+            const ctx = document.getElementById('progressChart').getContext('2d');
+            new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
+                    labels: ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes'],
                     datasets: [{
-                        label: 'Peso (kg)',
-                        data: [70, 71, 70.5, 72, 71],
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        fill: true
+                        label: 'Peso',
+                        data: [70, 69, 68, 67, 66],
+                        borderColor: '#FF5733',
+                        backgroundColor: 'rgba(255, 87, 51, 0.2)',
+                    }, {
+                        label: 'Altura',
+                        data: [170, 170, 170, 170, 170],
+                        borderColor: '#33B5FF',
+                        backgroundColor: 'rgba(51, 181, 255, 0.2)',
                     }]
                 },
                 options: {
                     responsive: true,
-                    plugins: {
-                        legend: {
-                            display: true
+                    scales: {
+                        x: {
+                            beginAtZero: true
                         },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' kg';
-                                }
-                            }
-                        }
-                    }
-                }
-            });
-
-            const heightCtx = document.getElementById('heightChart').getContext('2d');
-            new Chart(heightCtx, {
-                type: 'line',
-                data: {
-                    labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
-                    datasets: [{
-                        label: 'Altura (cm)',
-                        data: [175, 175.2, 175.1, 175.3, 175.2],
-                        borderColor: 'rgba(153, 102, 255, 1)',
-                        backgroundColor: 'rgba(153, 102, 255, 0.2)',
-                        fill: true
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            display: true
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' cm';
-                                }
-                            }
+                        y: {
+                            beginAtZero: true
                         }
                     }
                 }
             });
         }
 
-        function editUserInfo() {
-            const main = document.getElementById('main');
-            main.innerHTML = `
-                <h2>Editar Información del Usuario</h2>
-                <label>Nombre:</label>
-                <input type="text" id="newName" value="${userInfo.nombre}"><br><br>
-                <label>Peso (en kg):</label>
-                <input type="text" id="newWeight" value="${userInfo.peso}"><br><br>
-                <label>Altura (en cm):</label>
-                <input type="text" id="newHeight" value="${userInfo.altura}"><br><br>
-                <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
-                <button class="back-button" onclick="showMainScreen()">Volver</button>
-            `;
-        }
-
-        function saveUserInfo() {
-            userInfo.nombre = document.getElementById('newName').value;
-            userInfo.peso = document.getElementById('newWeight').value;
-            userInfo.altura = document.getElementById('newHeight').value;
-            alert('Información actualizada con éxito!');
-            showMainScreen();
-        }
-
-        // Inicialización de la aplicación
-        showLoginScreen();
+        showLoginScreen(); // Inicia con la pantalla de inicio de sesión
     </script>
 </body>
 </html>
